--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -6,3 +6,7 @@ parameters:
         - public/
         - src/
         - tests/
+    symfony:
+        containerXmlPath: var/cache/dev/App_KernelDevDebugContainer.xml
+    doctrine:
+        objectManagerLoader: tests/object-manager.php
