--- a/composer.json
+++ b/composer.json
@@ -67,9 +67,9 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "phpstan": "phpstan analyse --memory-limit=1G",
-        "cs-check": "php-cs-fixer fix --dry-run --diff",
-        "cs-fix": "php-cs-fixer fix",
+        "phpstan": "vendor/bin/phpstan analyse --memory-limit=1G",
+        "cs-check": "vendor/bin/php-cs-fixer fix --dry-run --diff",
+        "cs-fix": "vendor/bin/php-cs-fixer fix",
         "test": "vendor/bin/phpunit",
         "check": [
             "@phpstan",
