--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,12 @@ services:
       - mysql_data:/var/lib/mysql
     networks:
       - cinema_network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
   swagger-ui:
     image: swaggerapi/swagger-ui
