--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
         "phpstan": "vendor/bin/phpstan analyse --memory-limit=1G",
         "cs-check": "vendor/bin/php-cs-fixer fix --dry-run --diff",
         "cs-fix": "vendor/bin/php-cs-fixer fix",
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/phpunit --exclude-group skip-in-ci",
         "check": [
             "@phpstan",
             "@cs-check",
@@ -89,14 +89,15 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "*",
+        "doctrine/doctrine-fixtures-bundle": ">=4.3.1",
         "friendsofphp/php-cs-fixer": ">=3.92.5",
         "phpstan/extension-installer": "^1.4.3",
         "phpstan/phpstan": "^2.1.33",
         "phpstan/phpstan-doctrine": "^2.0.12",
         "phpstan/phpstan-symfony": "^2.0.9",
-        "phpunit/phpunit": "^11.5.47",
-        "symfony/maker-bundle": "*",
+        "phpunit/phpunit": "^11.5.48",
+        "symfony/browser-kit": "8.0.*",
+        "symfony/css-selector": "8.0.*",
         "symfony/phpunit-bridge": "^8.0.3"
     }
 }
