--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,9 @@ security:
     access_control:
         - { path: ^/api/v1/auth, roles: PUBLIC_ACCESS }
         - { path: ^/api/v1/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/v1/bookings, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1/screenings/[^/]+/seats, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
